# DICIS-Ubica

./: .gitignore  CONTRIBUTING.md  README.md  biome.json
.github/workflow/: scraper.yml
.github/workflows/: lint.yml  scraper.yml
demo/: main.ipynb
frontend/: data.json  next.config.ts  package.json  pnpm-lock.yaml
frontend/public/: manifest.json
frontend/src/: data.db  data.json  db.ts  types.ts  utils.ts
frontend/src/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/panel/: page.tsx
frontend/src/app/professors/: page.tsx
frontend/src/app/rooms/: page.tsx
frontend/src/app/subjects/: page.tsx
frontend/src/backend/: db.ts  types.ts  utils.ts
frontend/src/backend/repositories/: class.repository.ts  professor.repository.ts  room.repository.ts  subject.repository.ts
frontend/src/backend/services/: professor.service.ts  room.service.ts  subject.service.ts
frontend/src/data/: contributors.json
frontend/src/docs/: ComponentLibrary.md
frontend/src/hooks/: useFavoritesData.ts  useMySubjects.ts  useScheduleModal.ts
frontend/src/models/: class.model.ts  professor.model.ts  room.model.ts  subject.model.ts
frontend/src/repositories/: class.repository.ts  professor.repository.ts  room.repository.ts  subject.repository.ts
frontend/src/services/: professor.service.ts  room.service.ts
scrapper/: pyproject.toml  requirements.txt
scrapper/src/: db.py  main.py  room_merger.py  utils.py
scrapper/src/scrapers/: dicis_salamanca.py  index.py
scripts/: pyproject.toml  requirements.txt  scrapper.py
(+38 files in other folders)
