[project]
name = "dicis-tracker-scripts"
version = "0.1.0"
description = "Scripts for DICIS Tracker"

[tool.ruff]
line-length = 100
target-version = "py310"
indent-width = 2

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90"]
# E501 = Line too long (lo ignoramos porque los queries SQL largos no se pueden arreglar solos)
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
